# octosuite

./: Dockerfile  LICENSE  Makefile  README.md  octosuite  pyproject.toml  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  python-publish.yml
core/: main.py
lib/: banner.py  colors.py
octosuite/: __init__.py  banner.py  banners.py  colors.py  config.py  csv_loggers.py  helper.py  log_roller.py  main.py  message_prefixes.py  octosuite.py  sign_vars.py
octosuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
octosuite/core/: api.py  github.py  models.py
octosuite/tui/: dialogs.py  menus.py  prompts.py
src/: main.py
src/octosuite/: __init__.py  _app.py  _cli.py  app.py  lib.py
src/octosuite/core/: cache.py  github.py  models.py
src/octosuite/tui/: __init__.py  dialogs.py  menus.py  prompts.py
utilities/: colors.py  helper.py  misc.py
utils/: colors.py  helper.py  misc.py
